# bi-boiled-water

./: Cargo.toml  README.md  README_CN.md
crates/: .gitignore
examples/basic-flag/: Cargo.toml
examples/basic-flag/src/: main.rs
examples/simple-flag/: Cargo.toml
examples/simple-flag/src/: main.rs
